--- a/style/style.css
+++ b/style/style.css
@@ -10,71 +10,72 @@
 
 body{
   display: grid;
-  grid-template-columns: repeat(autofit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   justify-items: center;
   align-items: center;
   gap: 10px;
 
   margin: 20px;
+
+  grid-template-areas:
+  "header header header"
+  "nav nav nav"
+  "main main aside"
+  "footer footer footer";
+  
 }
 
 header{
   display: flex;
   justify-content: center;
   align-items: center;
-  grid-column: 1/4;
-  grid-row: 1/2;
-
-  height: 300px;
-  text-align: center;
   
+  grid-area: header;
 
-  /*border-style: solid;*/
+  min-height: 150px;
+  text-align: center;
+    
   width: 100%;
 
-  /*background-color: #7575751a;*/
-
+  
   background-color: rgb(232, 236, 236)
-
- 
-
-
 }
 
 nav{
-  grid-column: 1/4;
-  grid-row: 2/3;
+  grid-area: nav;
 
-  /*border-style: solid;*/
   width: 100%;
   height: 100%;
   
   background-color: rgb(226, 240, 240)
-
   
 }
 
 
 main{
-  grid-column: 1/3;
-  grid-row: 3/4;
+  grid-area: main;
 
   
 }
 
 aside{
-  grid-column: 3/4;
-  grid-row: 3/4;
+  
+  grid-area: aside;
+
+
   align-self: self-start;
 
   border-style: solid;
 
-  width: 450px;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
 
-  margin-top: 20px;
+  margin: 20px;
   
   padding: 10px;
+
+  border-radius: 10px;
+  background-color: rgb(207, 207, 247);
   
 }
 
@@ -84,15 +85,15 @@ footer{
   align-items: end;
   justify-content: center;
   
-  grid-column: 1/4;
-  grid-row: 4/5;
+  grid-area: footer;
   
-  height: 400px;
+  min-height: 100px;
   
-  /*border-style: solid;*/
+  
   width: 100%;
 
-  margin-top: 20px;
+  margin: 20px;
+  
 
   background-color: rgb(195, 238, 238)
 }
@@ -131,60 +132,195 @@ footer p{
 
 .articulos{
   display: grid;
-  grid-template-columns: repeat(autofit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   justify-items: center;
   align-items: flex-start;
   justify-content: flex-start;
-  gap: 20px 80px;
+  gap: 20px 80px;  
 
+
+  grid-template-areas:
   
+  "titulo titulo"
+  "articulo1 articulo2"
+  "articulo3 articulo4"
+  "articulo5 articulo6"
+  ;
   
 }
 
-section h2{  
-  grid-column: 1/5;
-  grid-row: 1/2;  
+.articulos h2{  
+  grid-area: titulo;  
 
   font-size: 30px;
 }
 
 
 .articulo1{
-  grid-column: 1/3;
-  grid-row: 2/3;
-
+  grid-area: articulo1;
   
-  
-
+  line-height: 1.5;
 }
 
 .articulo2{
-  grid-column: 3/5;
-  grid-row: 2/3;
+  grid-area: articulo2;
+
+  line-height: 1.5;
 }
 
 .articulo3{
-  grid-column: 1/3;
-  grid-row: 3/4;
+  grid-area: articulo3;
+
+  line-height: 1.5;
 }
 
 .articulo4{
-  grid-column: 3/5;
-  grid-row: 3/4;
+  grid-area: articulo4;
+
+  line-height: 1.5;
 }
 
 .articulo5{
-  grid-column: 1/3;
-  grid-row: 4/5;
+  grid-area: articulo5;
+
+  line-height: 1.5;
   
 }
 
 .articulo6{
-  grid-column: 3/5;
-  grid-row: 4/5;
+  grid-area: articulo6;
+
+  line-height: 1.5;
   
 }
 
-article ul li{
+
+.aislamiento-motor{
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  justify-items: left;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 20px 80px;  
+  
+
+  grid-template-areas: 
+  "titulo"
+  "articulo7"
+  "articulo8"
+  "articulo9"
+  "articulo10"
+  "articulo11"
+  "articulo12"
+  "articulo13";
+  
+
   line-height: 1.5;
+
+   
+}
+
+
+.aislamiento-motor h2{  
+  grid-area: titulo;
+  
+  align-items: center;
+  justify-items: center;
+  justify-self: center;
+
+  font-size: 30px;
+}
+
+
+
+.articulo7{
+  grid-area: articulo7;
+
+}
+
+.articulo8{
+  grid-area: articulo8;
+}
+
+.articulo9{
+  grid-area: articulo9;
+
+}
+
+.articulo10{
+  grid-area: articulo10;
+
+}
+
+.articulo11{
+  grid-area: articulo11;
+
+}
+
+.articulo12{
+  grid-area: articulo12;
+
+}
+
+.articulo13{
+  grid-area: articulo13;
+
+}
+
+
+/*AJUSTE DE LOS MEDIA QUERYS */
+
+@media (max-width: 768px) {
+  body {
+    grid-template-areas:
+    "header"
+    "nav"
+    "main"
+    "aside"
+    "footer";
+    
+    grid-template-columns: 1fr;
+  }
+
+  aside {
+    max-width: 100%;
+  }
+
+  .articulos{
+
+    grid-template-areas:
+    "titulo"
+    "articulo1"
+    "articulo2"
+    "articulo3"
+    "articulo4"
+    "articulo5"
+    "articulo6";
+
+    grid-template-columns: 1fr;
+
+  }
+
+  .aislamiento-motor{
+
+    grid-template-areas: 
+    "titulo"
+    "articulo7"
+    "articulo8"
+    "articulo9"
+    "articulo10"
+    "articulo11"
+    "articulo12"
+    "articulo13";
+    
+    grid-template-columns: 1fr;
+    
+
+   
+  }
+
+
+
+
 }
