--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,8 @@ header{
     
   width: 100%;
 
+  border-radius: 1rem;
+
   
   background-color: rgb(232, 236, 236)
 }
@@ -102,6 +104,8 @@ nav{
   flex-wrap: nowrap; 
   gap: 20px;
 
+  border-radius: 1rem;
+
 
   width: 100%;
   height: 100%;
@@ -113,6 +117,14 @@ nav{
 nav li:hover{
   background-color: rgb(150, 150, 245);
   box-shadow: 5px 5px blue; 
+
+  border-radius: 1rem;
+
+ 
+
+  
+
+  
   
 }
 
@@ -125,6 +137,8 @@ nav a {
 nav a:hover,
 nav a:focus {
   color: aquamarine !important; /* Blanco al pasar el mouse */
+
+  
   
 }
 
@@ -179,8 +193,13 @@ footer{
   justify-content: center;
   
   grid-area: footer;
+
+  font-size: clamp(10px, 4vw, 16px);
   
   min-height: 100px;
+  text-align: center;
+
+  border-radius: 1rem;
   
   
   width: 100%;
@@ -196,12 +215,14 @@ footer{
    
   list-style-type: none;
 
-  font-size: clamp(12px, 3.2vw, 20px);
+  font-size: clamp(12px, 3.2vw, 24px);
 
   flex-direction: row;
   justify-content: center;
 
   
+
+
   gap: 20px;
   padding: 0 4px;
 
